crates/strider-analyze/tests/snapshots/v3__aarch64__globals__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x7a0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x7b0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nx3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x7c0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v21" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v21" [color="#888888", style=dashed];
  "v21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "24" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x7d0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v29" [color="#888888", style=dashed];
  "v29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "33" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "25" -> "33" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "36" -> "33" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v37" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v37" [color="#888888", style=dashed];
  "v37" -> "33" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v38" [color="#888888", style=dashed];
  "v38" -> "33" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "36" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v42" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v42" [color="#888888", style=dashed];
  "v42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "25" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "47" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "43" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v51" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v51" [color="#888888", style=dashed];
  "v51" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "52" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "49" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "17" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "50" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "53" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v29" -> "53" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "54" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "52" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v58" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v58" [color="#888888", style=dashed];
  "v58" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "59" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "56" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "59" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "9" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "57" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "60" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "59" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v61" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v61" -> "60" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "60" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v12" -> "63" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "64" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "62" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "64" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "65" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "64" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\nx3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="init\nx2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "67" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "68" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "71" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "71" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "74" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "76" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "74" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "77" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "77" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
